# era-etp-bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml
.github/: INIT.md
bot/: __init__.py  config.py  db.py  keyboards.py  main.py  notify.py  states.py
bot/handlers/: __init__.py  _post_request.py  admin.py  car.py  common.py  parts.py  shop.py  start.py
bot/utils/: order_accepted.py  payments.py  text.py  validators.py
scripts/: e2e_simulate.py
